// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders footerLink styles added 1`] = `
.emotion-0 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-4 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-6 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-8 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<footer
  className="emotion-0 emotion-1"
>
  <nav
    className="emotion-2 emotion-3"
  >
    <ul
      className="emotion-4 emotion-5"
    >
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={
            Object {
              "color": "#fff",
            }
          }
        >
          Home
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/palette"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={
            Object {
              "color": "#fff",
            }
          }
        >
          Palette
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/api-page"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={
            Object {
              "color": "#fff",
            }
          }
        >
          API
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/about"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={
            Object {
              "color": "#fff",
            }
          }
        >
          About
        </a>
      </li>
    </ul>
  </nav>
</footer>
`;

exports[`Footer renders without crashing 1`] = `
.emotion-0 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-4 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-6 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-8 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<footer
  className="emotion-0 emotion-1"
>
  <nav
    className="emotion-2 emotion-3"
  >
    <ul
      className="emotion-4 emotion-5"
    >
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Home
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/palette"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Palette
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/api-page"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          API
        </a>
      </li>
      <li
        className="emotion-6 emotion-7"
      >
        <a
          className="emotion-8 emotion-9"
          href="/about"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          About
        </a>
      </li>
    </ul>
  </nav>
</footer>
`;
